src/pages/blog.module.scss
.posts {
    display: flex;
    margin: 0;
    flex-wrap: wrap;
    align-items: flex-start;
    align-content: flex-start;
}

.cover-image {
    margin: 0;
    width: 100%;
    height: 200px;
    object-fit: cover;
}
.post-link {
    text-decoration: none;
    position: relative;
}

.read-time {
    position: absolute;
    bottom: 1rem;
    left: 1rem;
    padding: 0;
    font-weight: bold;
    color: #fff;
    font-size: 0.8rem;
    opacity: 0.5;
    transition: opacity 0.3s ease-in-out;
}

.post-content {
    padding: 1rem 1.5rem;

    h2 {
        color: rgba(0, 0, 0, 0.7);
        text-decoration: none;
        border-bottom: 0 !important;
        font-size: 1.2rem;
        margin-top: 1rem;
    }

    p {
        font-size: 0.9rem;
        margin-bottom: 0;
        color: rgba(0, 0, 0, 0.5);
    }
}

.post-date {
    font-size: 0.8rem;
    color: rgba(0, 0, 0, 0.4) !important;
    margin-bottom: 0 !important;
    height: auto;
    max-height: 0;
    overflow: hidden;
    margin-top: 0;
    transition: max-height 0.5s ease-in-out, margin-top 0.5s ease-in-out;
    // transition-delay: 0.3s;
}

.post {
    margin: 1rem;
    display: flex;
    background: #fff;
    border-radius: 8px;
    flex-direction: column;
    overflow: hidden;
    -webkit-box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.2);
    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.2);

    @media screen and (max-width: 500px) {
        width: 100%;
        margin: 1rem 0;
    }

    @media screen and (min-width: 501px) and (max-width: 750px) {
        width: 100%;
    }

    @media screen and (min-width: 751px) {
        width: 50%;
        flex: 1 0 40%;
    }

    transition: all 0.3s ease-in-out;

    &:hover {
        transform: scale(1.05);

        p[class*="post-date-"] {
            max-height: 30px;
            margin-top: 1rem;
        }

        div[class*="read-time-"] {
            opacity: 1;
        }

    }
}

